--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "history": "^4.10.1",
+    "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
-    "reactotron-react-js": "^3.3.4"
+    "reactotron-react-js": "^3.3.4",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
