--- a/api/.env.example
+++ b/api/.env.example
@@ -10,7 +10,7 @@ APP_SECRET=meetappsecret
 DB_HOST=localhost
 DB_PORT=5433
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=docker
 DB_NAME=meetapp
 
 # Mongo
