--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "queue": "nodemon src/queue.js"
+    "queue": "nodemon src/queue.js",
+    "migrate": "yarn sequelize db:migrate"
   },
   "dependencies": {
     "@sentry/node": "^5.6.2",
