--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
+    "react-loader-spinner": "^3.1.4",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
