--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,9 @@
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
-    "react-loader-spinner": "^3.1.4",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
