--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -34,6 +34,10 @@ target 'Meetapp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'MeetappTests' do
     inherit! :search_paths
     # Pods for testing
